--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ python:
   - "3.2"
 install:
   - pip install -r requirements.txt
+  - pip install coveralls
 
 script: 
   - py.test --cov .
+after_success:
+  coveralls
